added section faq

--- a/index.html
+++ b/index.html
@@ -1663,6 +1663,153 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="faq section container hidden-tablet" aria-labelledby="faq-title">
+			<h2 class="section__title h3" id="faq-title">
+				Часто задаваемые вопросы
+			</h2>
+
+			<div class=" faq-accordion" id="faq-accordion" aria-labelledby="faq-accordion">
+				<div class="faq-accordion__element">
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-1" />
+					<dt class="faq-accordion__question">
+						<label class="faq-accordion__question-button" for="accordion-element-1" aria-expanded="false"
+							aria-controls="answer-1">
+							Как записаться онлайн?
+
+							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
+					</dt>
+
+					<dd class="faq-accordion__answer" id="answer-1">
+						<article class="faq-accordion__answer-text">
+							<h3 class="visually-hidden">Информация о записи онлайн</h3>
+
+							<p>
+								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+							</p>
+						</article>
+					</dd>
+
+				</div>
+
+				<div class="faq-accordion__element">
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-2" />
+					<dt class="faq-accordion__question">
+						<label class="faq-accordion__question-button" for="accordion-element-2" aria-expanded="false"
+							aria-controls="answer-2">
+							Как отменить или перенести запись?
+
+							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
+					</dt>
+
+					<dd class="faq-accordion__answer" id="answer-2">
+						<article class="faq-accordion__answer-text">
+							<h3 class="visually-hidden">Информация об отмене записи онлайн</h3>
+
+							<p>
+								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+							</p>
+						</article>
+					</dd>
+
+				</div>
+
+
+				<div class="faq-accordion__element">
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-3" />
+					<dt class="faq-accordion__question">
+						<label class="faq-accordion__question-button" for="accordion-element-3" aria-expanded="false"
+							aria-controls="answer-3">
+							Как осуществляется хранение шин?
+
+							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
+					</dt>
+
+					<dd class="faq-accordion__answer" id="answer-3">
+						<article class="faq-accordion__answer-text">
+							<h3 class="visually-hidden">Информация о хранении шин</h3>
+
+							<p>
+								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+							</p>
+						</article>
+					</dd>
+
+				</div>
+
+				<div class="faq-accordion__element">
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-4" />
+					<dt class="faq-accordion__question">
+						<label class="faq-accordion__question-button" for="accordion-element-4" aria-expanded="false"
+							aria-controls="answer-4">
+							Как быстро мои шины привезут на&nbsp;шиномонтаж?
+
+							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
+					</dt>
+
+					<dd class="faq-accordion__answer" id="answer-4">
+						<article class="faq-accordion__answer-text">
+							<h3 class="visually-hidden">Информация об скорости доставки шин</h3>
+
+							<p>
+								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+							</p>
+						</article>
+					</dd>
+
+				</div>
+
+				<div class="faq-accordion__element">
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-5" />
+					<dt class="faq-accordion__question">
+						<label class="faq-accordion__question-button" for="accordion-element-5" aria-expanded="false"
+							aria-controls="answer-5">
+							Есть&nbsp;ли курьерская доставка шин к&nbsp;вам на&nbsp;хранение или ко&nbsp;мне домой?
+
+							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
+					</dt>
+
+					<dd class="faq-accordion__answer" id="answer-5">
+						<article class="faq-accordion__answer-text">
+							<h3 class="visually-hidden">Информация о курьерской доставке</h3>
+
+							<p>
+								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+							</p>
+						</article>
+					</dd>
+
+				</div>
+
+				<div class="faq-accordion__element">
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-6" />
+					<dt class="faq-accordion__question">
+						<label class="faq-accordion__question-button" for="accordion-element-6" aria-expanded="false"
+							aria-controls="answer-6">
+							Как узнать номер моей скидочной карты?
+
+							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
+					</dt>
+
+					<dd class="faq-accordion__answer" id="answer-6">
+						<article class="faq-accordion__answer-text">
+							<h3 class="visually-hidden">Информация о номере скидочной карты клиента</h3>
+
+							<p>
+								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+							</p>
+						</article>
+					</dd>
+
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer class="footer">
