added section appointment-choose

--- a/index.html
+++ b/index.html
@@ -1601,7 +1601,7 @@
 					В&nbsp;Telegram
 				</a>
 
-				<a class="advantages__button button button--accent-bg" href="#!" target="_blank">
+				<a class="advantages__button button button--accent-bg" href="#!">
 					На&nbsp;сайте
 				</a>
 			</div>
@@ -1809,6 +1809,36 @@
 
 				</div>
 			</div>
+		</section>
+
+		<section class="appointment-choose section container" aria-labelledby="appointment-choose-title">
+			<h2 class="visually-hidden">Выбор способа записи в мастерскую 2АТМ</h2>
+
+			<div class="appointment-choose__wrapper">
+				<div class="appointment-choose__image-wrapper">
+					<img class="appointment-choose__image" src="./images/gifes/car-service-icon-1.gif" width="228" height="285"
+						alt="Иконка сервиса ремонта авто" loading="lazy">
+				</div>
+
+				<h3 class="appointment-choose__title" id="appointment-choose-title">
+					Хотите записаться?<br>
+					Выбирайте удобный способ!
+					</h2>
+
+
+
+
+					<div class="appointment-choose__buttons">
+						<a class="button" href="#!" target="_blank">
+							В&nbsp;Telegram
+						</a>
+
+						<a class="button button--accent-bg" href="#!">
+							На&nbsp;сайте
+						</a>
+					</div>
+			</div>
+
 		</section>
 	</main>
 
