create addresses page. added section page-heading

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 	<link rel="icon" type="image/svg+xml" sizes="32x32" href="./images/icons/favicon.svg">
 	<link rel="icon" type="image/svg+xml" sizes="48x48" href="./images/icons/favicon.svg">
 	<link rel="apple-touch-icon" sizes="180x180" href="./images/icons/favicon.svg">
-	<!-- <meta name="description" content=""> -->
+	<meta name="description"
+		content="Сеть автосервисов 2ATM в Санкт-Петербурге: шиномонтаж, развал-схождение, ТО, заправка кондиционеров. Запись через сайт или Telegram.">
 	<link rel="stylesheet" href="./libs/swiper/swiper-bundle.min.css">
-	<title>2ATM | HOME</title>
+	<title>2ATM | Главная</title>
 	<link rel="stylesheet" href="./styles/index-page/index.css ">
 </head>
 
@@ -26,7 +27,7 @@
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link" href="#!">
+					<a class="header-top-menu__link" href="/addresses.html">
 						Адреса
 					</a>
 				</li>
@@ -594,11 +595,12 @@
 								</div>
 
 								<div class="location-card__body">
-									<button class="location-card__address" type="button">
-										<h4 class="h5" data-js-location-card-address>
+									<h4 class="location-card__address">
+										<a class="location-card__address-button h5" href="/addresses-card.html"
+											data-js-location-card-address>
 											Муринская дорога, д. 24
-										</h4>
-									</button>
+										</a>
+									</h4>
 
 									<div class="location-card__text-block">
 										<p data-js-location-card-name>
@@ -647,11 +649,12 @@
 								</div>
 
 								<div class="location-card__body">
-									<button class="location-card__address" type="button">
-										<h4 class="h5" data-js-location-card-address>
+									<h4 class="location-card__address">
+										<a class="location-card__address-button h5" href="/addresses-card.html"
+											data-js-location-card-address>
 											Муринская дорога, д. 24
-										</h4>
-									</button>
+										</a>
+									</h4>
 
 									<div class="location-card__text-block">
 										<p data-js-location-card-name>
@@ -700,11 +703,12 @@
 								</div>
 
 								<div class="location-card__body">
-									<button class="location-card__address" type="button">
-										<h4 class="h5" data-js-location-card-address>
+									<h4 class="location-card__address">
+										<a class="location-card__address-button h5" href="/addresses-card.html"
+											data-js-location-card-address>
 											Муринская дорога, д. 24
-										</h4>
-									</button>
+										</a>
+									</h4>
 
 									<div class="location-card__text-block">
 										<p data-js-location-card-name>
@@ -753,11 +757,12 @@
 								</div>
 
 								<div class="location-card__body">
-									<button class="location-card__address" type="button">
-										<h4 class="h5" data-js-location-card-address>
+									<h4 class="location-card__address">
+										<a class="location-card__address-button h5" href="/addresses-card.html"
+											data-js-location-card-address>
 											Муринская дорога, д. 24
-										</h4>
-									</button>
+										</a>
+									</h4>
 
 									<div class="location-card__text-block">
 										<p data-js-location-card-name>
@@ -806,11 +811,12 @@
 								</div>
 
 								<div class="location-card__body">
-									<button class="location-card__address" type="button">
-										<h4 class="h5" data-js-location-card-address>
+									<h4 class="location-card__address">
+										<a class="location-card__address-button h5" href="/addresses-card.html"
+											data-js-location-card-address>
 											Муринская дорога, д. 24
-										</h4>
-									</button>
+										</a>
+									</h4>
 
 									<div class="location-card__text-block">
 										<p data-js-location-card-name>
@@ -1669,146 +1675,155 @@
 				Часто задаваемые вопросы
 			</h2>
 
-			<div class=" faq-accordion" id="faq-accordion" aria-labelledby="faq-accordion">
-				<div class="faq-accordion__element">
-					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-1" />
-					<dt class="faq-accordion__question">
-						<label class="faq-accordion__question-button" for="accordion-element-1" aria-expanded="false"
-							aria-controls="answer-1">
-							Как записаться онлайн?
+			<ul class="faq-accordion" id="faq-accordion" aria-labelledby="faq-accordion">
+				<li class="faq-accordion__element">
 
-							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
-					</dt>
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-1">
+					<dl class="faq-accordion__content">
+						<dt class="faq-accordion__question">
+							<label class="faq-accordion__question-button" for="accordion-element-1" aria-controls="answer-1">
+								Как записаться онлайн?
 
-					<dd class="faq-accordion__answer" id="answer-1">
-						<article class="faq-accordion__answer-text">
-							<h3 class="visually-hidden">Информация о записи онлайн</h3>
+								<span class="faq-accordion__question-icon" role="img" aria-label="Открыть или закрыть"></span>
+							</label>
+						</dt>
 
-							<p>
-								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
-								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
-							</p>
-						</article>
-					</dd>
+						<dd class="faq-accordion__answer" id="answer-1">
+							<div class="faq-accordion__answer-text">
+								<h3 class="visually-hidden">Информация о записи онлайн</h3>
 
-				</div>
+								<p>
+									Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+									работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+								</p>
+							</div>
+						</dd>
+					</dl>
+				</li>
 
-				<div class="faq-accordion__element">
-					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-2" />
-					<dt class="faq-accordion__question">
-						<label class="faq-accordion__question-button" for="accordion-element-2" aria-expanded="false"
-							aria-controls="answer-2">
-							Как отменить или перенести запись?
+				<li class="faq-accordion__element">
 
-							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
-					</dt>
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-2">
+					<dl class="faq-accordion__content">
+						<dt class="faq-accordion__question">
+							<label class="faq-accordion__question-button" for="accordion-element-2" aria-controls="answer-2">
+								Как отменить или перенести запись?
 
-					<dd class="faq-accordion__answer" id="answer-2">
-						<article class="faq-accordion__answer-text">
-							<h3 class="visually-hidden">Информация об отмене записи онлайн</h3>
+								<span class="faq-accordion__question-icon" role="img" aria-label="Открыть или закрыть"></span>
+							</label>
+						</dt>
 
-							<p>
-								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
-								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
-							</p>
-						</article>
-					</dd>
+						<dd class="faq-accordion__answer" id="answer-2">
+							<div class="faq-accordion__answer-text">
+								<h3 class="visually-hidden">Информация об отмене записи онлайн</h3>
 
-				</div>
+								<p>
+									Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+									работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+								</p>
+							</div>
+						</dd>
+					</dl>
+				</li>
 
+				<li class="faq-accordion__element">
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-3">
+					<dl class="faq-accordion__content">
+						<dt class="faq-accordion__question">
+							<label class="faq-accordion__question-button" for="accordion-element-3" aria-controls="answer-3">
+								Как осуществляется хранение шин?
 
-				<div class="faq-accordion__element">
-					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-3" />
-					<dt class="faq-accordion__question">
-						<label class="faq-accordion__question-button" for="accordion-element-3" aria-expanded="false"
-							aria-controls="answer-3">
-							Как осуществляется хранение шин?
+								<span class="faq-accordion__question-icon" role="img" aria-label="Открыть или закрыть"></span>
+							</label>
+						</dt>
 
-							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
-					</dt>
+						<dd class="faq-accordion__answer" id="answer-3">
+							<div class="faq-accordion__answer-text">
+								<h3 class="visually-hidden">Информация о хранении шин</h3>
 
-					<dd class="faq-accordion__answer" id="answer-3">
-						<article class="faq-accordion__answer-text">
-							<h3 class="visually-hidden">Информация о хранении шин</h3>
+								<p>
+									Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+									работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+								</p>
+							</div>
+						</dd>
+					</dl>
+				</li>
 
-							<p>
-								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
-								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
-							</p>
-						</article>
-					</dd>
+				<li class="faq-accordion__element">
 
-				</div>
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-4">
+					<dl class="faq-accordion__content">
+						<dt class="faq-accordion__question">
+							<label class="faq-accordion__question-button" for="accordion-element-4" aria-controls="answer-4">
+								Как быстро мои шины привезут на&nbsp;шиномонтаж?
 
-				<div class="faq-accordion__element">
-					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-4" />
-					<dt class="faq-accordion__question">
-						<label class="faq-accordion__question-button" for="accordion-element-4" aria-expanded="false"
-							aria-controls="answer-4">
-							Как быстро мои шины привезут на&nbsp;шиномонтаж?
+								<span class="faq-accordion__question-icon" role="img" aria-label="Открыть или закрыть"></span>
+							</label>
+						</dt>
 
-							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
-					</dt>
+						<dd class="faq-accordion__answer" id="answer-4">
+							<div class="faq-accordion__answer-text">
+								<h3 class="visually-hidden">Информация об скорости доставки шин</h3>
 
-					<dd class="faq-accordion__answer" id="answer-4">
-						<article class="faq-accordion__answer-text">
-							<h3 class="visually-hidden">Информация об скорости доставки шин</h3>
+								<p>
+									Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+									работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+								</p>
+							</div>
+						</dd>
+					</dl>
+				</li>
 
-							<p>
-								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
-								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
-							</p>
-						</article>
-					</dd>
+				<li class="faq-accordion__element">
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-5">
+					<dl class="faq-accordion__content">
+						<dt class="faq-accordion__question">
+							<label class="faq-accordion__question-button" for="accordion-element-5" aria-controls="answer-5">
+								Есть&nbsp;ли курьерская доставка шин к&nbsp;вам на&nbsp;хранение или ко&nbsp;мне домой?
 
-				</div>
+								<span class="faq-accordion__question-icon" role="img" aria-label="Открыть или закрыть"></span>
+							</label>
+						</dt>
 
-				<div class="faq-accordion__element">
-					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-5" />
-					<dt class="faq-accordion__question">
-						<label class="faq-accordion__question-button" for="accordion-element-5" aria-expanded="false"
-							aria-controls="answer-5">
-							Есть&nbsp;ли курьерская доставка шин к&nbsp;вам на&nbsp;хранение или ко&nbsp;мне домой?
+						<dd class="faq-accordion__answer" id="answer-5">
+							<div class="faq-accordion__answer-text">
+								<h3 class="visually-hidden">Информация о курьерской доставке</h3>
 
-							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
-					</dt>
+								<p>
+									Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+									работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+								</p>
+							</div>
+						</dd>
+					</dl>
+				</li>
 
-					<dd class="faq-accordion__answer" id="answer-5">
-						<article class="faq-accordion__answer-text">
-							<h3 class="visually-hidden">Информация о курьерской доставке</h3>
+				<li class="faq-accordion__element">
 
-							<p>
-								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
-								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
-							</p>
-						</article>
-					</dd>
+					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-6">
+					<dl class="faq-accordion__content">
+						<dt class="faq-accordion__question">
+							<label class="faq-accordion__question-button" for="accordion-element-6" aria-controls="answer-6">
+								Как узнать номер моей скидочной карты?
 
-				</div>
+								<span class="faq-accordion__question-icon" role="img" aria-label="Открыть или закрыть"></span>
+							</label>
+						</dt>
 
-				<div class="faq-accordion__element">
-					<input class="faq-accordion__element-switcher" type="checkbox" id="accordion-element-6" />
-					<dt class="faq-accordion__question">
-						<label class="faq-accordion__question-button" for="accordion-element-6" aria-expanded="false"
-							aria-controls="answer-6">
-							Как узнать номер моей скидочной карты?
+						<dd class="faq-accordion__answer" id="answer-6">
+							<div class="faq-accordion__answer-text">
+								<h3 class="visually-hidden">Информация о номере скидочной карты клиента</h3>
 
-							<span class="faq-accordion__question-icon" role="image" aria-label="Открыть или закрыть"></span>
-					</dt>
-
-					<dd class="faq-accordion__answer" id="answer-6">
-						<article class="faq-accordion__answer-text">
-							<h3 class="visually-hidden">Информация о номере скидочной карты клиента</h3>
-
-							<p>
-								Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
-								работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
-							</p>
-						</article>
-					</dd>
-
-				</div>
-			</div>
+								<p>
+									Наша обновленная система записи позволяет выбрать ближайшую точку и&nbsp;выполнить все необходимые
+									работы в&nbsp;одном месте: мойка, ТО, шиномонтаж и многое другое.
+								</p>
+							</div>
+						</dd>
+					</dl>
+				</li>
+			</ul>
 		</section>
 
 		<section class="appointment-choose section container" aria-labelledby="appointment-choose-title">
@@ -1823,20 +1838,20 @@
 				<h3 class="appointment-choose__title" id="appointment-choose-title">
 					Хотите записаться?<br>
 					Выбирайте удобный способ!
-					</h2>
+				</h3>
 
 
 
 
-					<div class="appointment-choose__buttons">
-						<a class="button" href="#!" target="_blank">
-							В&nbsp;Telegram
-						</a>
+				<div class="appointment-choose__buttons">
+					<a class="button" href="#!" target="_blank">
+						В&nbsp;Telegram
+					</a>
 
-						<a class="button button--accent-bg" href="#!">
-							На&nbsp;сайте
-						</a>
-					</div>
+					<a class="button button--accent-bg" href="#!">
+						На&nbsp;сайте
+					</a>
+				</div>
 			</div>
 
 		</section>
@@ -1879,7 +1894,7 @@
 			<nav class="footer__links">
 				<ul class="footer__links-list">
 					<li>
-						<a class="footer__links-link" href="#!">Адреса</a>
+						<a class="footer__links-link" href="/addresses.html">Адреса</a>
 					</li>
 
 					<li>
