added section app-entry. addresses page

--- a/addresses.html
+++ b/addresses.html
@@ -532,6 +532,49 @@
 			</div>
 		</section>
 
+		<section class="app-entry container section" aria-labelledby="app-entry-title">
+			<h2 class="visually-hidden">Новый формат записи через приложение Telegram</h2>
+
+			<div class="app-entry__wrapper">
+
+
+				<h3 class="app-entry__title" id="app-entry-title">
+					Новый формат записи через приложение Telegram
+				</h3>
+
+
+				<picture class="app-entry__image-wrapper">
+					<source srcset="./images/app-entry/app-entry-mobile.webp" media="(max-width: 1300px)" type="image/webp">
+					<source srcset="./images/app-entry/app-entry.webp 1x , ./images/app-entry/app-entry@2x.webp 2x"
+						type="image/webp">
+					<img class="app-entry__image" src="./images/app-entry/app-entry-mobile.webp"
+						alt="Радостная женщина с телефоном" width="308" height="308" loading="lazy">
+				</picture>
+
+				<div class="app-entry__text">
+					<p>
+						Записывайтесь на&nbsp;шиномонтаж, автомойку и&nbsp;на&nbsp;сервис через нашего бота в&nbsp;телеграм.
+					</p>
+
+					<p>
+						Просто выберите необходимую услугу и&nbsp;подходящее время. Отменить запись можно так&nbsp;же легко.
+					</p>
+
+					<p>
+						Экономьте время и&nbsp;оцените удобство новой записи уже сейчас!
+					</p>
+				</div>
+
+				<a class="app-entry__button button button--entry-tg" href="https://telegram.org/" target="_blank">
+					<svg class="button__icon button__icon--tg" width="29" height="24" viewBox="0 0 29 24">
+						<use xlink:href="./images/icons/sprite-icons.svg#telegram-icon"></use>
+					</svg>
+
+					<span>Запись через Telegram</span>
+				</a>
+			</div>
+		</section>
+
 
 		<section class="appointment-choose section container" aria-labelledby="appointment-choose-title">
 			<h2 class="visually-hidden">Выбор способа записи в мастерскую 2АТМ</h2>
