correct link for addresses page

--- a/addresses.html
+++ b/addresses.html
@@ -27,7 +27,7 @@
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link" href="/addresses.html">
+					<a class="header-top-menu__link" href="./addresses.html">
 						Адреса
 					</a>
 				</li>
@@ -184,7 +184,7 @@
 					</li>
 
 					<li class="page-heading__breadcrumbs-item">
-						<a class="page-heading__breadcrumbs-link" href="/addresses.html" tabindex="-1" aria-disabled="true">
+						<a class="page-heading__breadcrumbs-link" href="./addresses.html" tabindex="-1">
 							Наши адреса
 						</a>
 					</li>
@@ -715,7 +715,7 @@
 			<nav class="footer__links">
 				<ul class="footer__links-list">
 					<li>
-						<a class="footer__links-link" href="/addresses.html">Адреса</a>
+						<a class="footer__links-link" href="./addresses.html">Адреса</a>
 					</li>
 
 					<li>
