--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</a>
 				</li>
 				<li>
-					<a class="header-top-menu__link" href="/addresses.html">
+					<a class="header-top-menu__link" href="./addresses.html">
 						Адреса
 					</a>
 				</li>
@@ -1894,7 +1894,7 @@
 			<nav class="footer__links">
 				<ul class="footer__links-list">
 					<li>
-						<a class="footer__links-link" href="/addresses.html">Адреса</a>
+						<a class="footer__links-link" href="./addresses.html">Адреса</a>
 					</li>
 
 					<li>
